Fix issue that caused legend color to be too wide

--- a/frontend/styles/Legend.module.css
+++ b/frontend/styles/Legend.module.css
@@ -26,7 +26,7 @@
 
 .legendColor {
   height: 12px;
-  width: 100px;
+  width: 12px;
   margin-right: var(--space-200);
 }
 
